[workspace]
members = ["crates/mqtt5", "crates/mqttv5-cli"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
rust-version = "1.83"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabriciobracht/mqtt-lib"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
