[workspace]
members = [
    "crates/mqtt5-protocol",
    "crates/mqtt5",
    "crates/mqtt5-wasm",
    "crates/mqttv5-cli",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
rust-version = "1.85"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LabOverWire/mqtt-lib"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.mqtt5-wasm]
opt-level = "z"
strip = "debuginfo"

[profile.dev]
debug = true

[profile.profiling]
inherits = "release"
debug = 2
lto = false
