[package]
name = "mqtt5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete MQTT v5.0 platform with high-performance async client and full-featured broker supporting TCP, TLS, WebSocket, authentication, bridging, and resource monitoring"
documentation = "https://docs.rs/mqtt5"
readme = "README.md"
keywords = ["mqtt", "iot", "messaging", "async", "broker"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "CLAUDE.md",
    "mutants.out*/",
    "docker-compose.yml",
    "comparative_benchmarks/",
    "test_certs/",
    "scripts/",
    "docs/",
    "run_integration_tests.sh",
]

[features]
default = []
turmoil-testing = ["turmoil"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "tracing-subscriber",
]
opentelemetry_sdk = ["dep:opentelemetry_sdk"]
opentelemetry-otlp = ["dep:opentelemetry-otlp"]
tracing-opentelemetry = ["dep:tracing-opentelemetry"]

wasm-client = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:web-time",
    "tokio",
]
wasm-broker = ["wasm-client"]
wasm-full = ["wasm-client", "wasm-broker"]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio-test = "0.4"
ulid = "1.2.1"
proptest = "1.9.0"
serde_json = "1.0.142"
rand = "0.9.2"
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0"
wasm-bindgen-test = "0.3"

url = "2.5.4"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
tempfile = "3.12.0"
cucumber = "0.21.1"

[[example]]
name = "simple_broker"
path = "examples/simple_broker.rs"

[[example]]
name = "broker_with_monitoring"
path = "examples/broker_with_monitoring.rs"

[[example]]
name = "broker_with_tls"
path = "examples/broker_with_tls.rs"

[[example]]
name = "broker_with_websocket"
path = "examples/broker_with_websocket.rs"

[[example]]
name = "broker_all_transports"
path = "examples/broker_all_transports.rs"

[[example]]
name = "broker_bridge_demo"
path = "examples/broker_bridge_demo.rs"

[[example]]
name = "broker_with_opentelemetry"
path = "examples/broker_with_opentelemetry.rs"
required-features = ["opentelemetry"]

[lib]
name = "mqtt5"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "cli_bdd"
path = "tests/cli_bdd.rs"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O0"]

[dependencies]
base64 = "0.22"
bebytes = "2.10"
bytes = "1.10"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
humantime-serde = "1.1"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"
tracing = "0.1"
url = "2.5"
log = "0.4"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
turmoil = { version = "0.7", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "trace",
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
    "trace",
    "grpc-tonic",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", features = ["trace"], optional = true }
mqtt5-protocol = { version = "0.10.0", path = "../mqtt5-protocol" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bcrypt = "0.17"
ring = "0.17.14"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.13.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
webpki-roots = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-time = { version = "1.0", optional = true }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", optional = true, features = [
    "BinaryType",
    "BroadcastChannel",
    "MessageChannel",
    "MessagePort",
    "MessageEvent",
    "ExtendableMessageEvent",
    "ServiceWorkerGlobalScope",
    "WebSocket",
    "CloseEvent",
    "ErrorEvent",
    "Blob",
    "Window",
    "Event",
    "EventTarget",
    "console",
] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
tokio = { version = "1.47", features = [
    "sync",
    "macros",
    "io-util",
    "time",
    "rt",
], optional = true }
