[package]
name = "mqttv5-cli"
version = "0.9.0"
edition = "2021"
rust-version = "1.83"
authors = ["fabriciobracht <fabricio@bracht.dev>"]
description = "Superior CLI tool for MQTT v5.0 - unified client and broker commands with ergonomic input design"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabriciobracht/mqtt-lib"
keywords = ["mqtt", "cli", "client", "broker", "iot"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "mqttv5"
path = "src/main.rs"

[features]
default = []
opentelemetry = ["mqtt5/opentelemetry"]

[dependencies]
mqtt5 = { version = "0.9.0", path = "../.." }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
rand = "0.9.2"
rustls = { version = "0.23", features = ["ring"] }
rpassword = "7.4"
bcrypt = "0.17.1"
