[package]
name = "mqttv5-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Superior CLI tool for MQTT v5.0 - unified client and broker commands with ergonomic input design"
documentation = "https://docs.rs/mqttv5-cli"
readme = "README.md"
keywords = ["mqtt", "cli", "client", "broker", "iot"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "mqttv5"
path = "src/main.rs"

[features]
default = []
opentelemetry = ["mqtt5/opentelemetry"]

[dependencies]
mqtt5 = { version = "0.10.0", path = "../mqtt5" }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
rand = "0.9.2"
rustls = { version = "0.23", features = ["ring"] }
rpassword = "7.4"
argon2 = "0.5"
